--- a/crates/recursion/gnark-ffi/Cargo.toml
+++ b/crates/recursion/gnark-ffi/Cargo.toml
@@ -16,6 +16,7 @@ p3-baby-bear = { workspace = true }
 sp1-recursion-compiler = { workspace = true }
 sp1-core-machine = { workspace = true }
 sp1-stark = { workspace = true }
+sp1-build = { workspace = true }
 serde = "1.0.204"
 serde_json = "1.0.121"
 tempfile = "3.10.1"
